# sparse_merkle_tree

methods/guest/: Cargo.toml
starter/: Cargo.toml
starter/src/: main.rs
